--- a/CM/ClassLibrary1/LibraryManage.csproj
+++ b/CM/ClassLibrary1/LibraryManage.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAOs\CarDAO.cs" />
     <Compile Include="DAOs\LoginDAO.cs" />
     <Compile Include="DTOs\AccountDTO.cs" />
     <Compile Include="DTOs\BrandDTO.cs" />
